updated app.py  and notebook

--- a/notebooks/analyze_covid_deaths.ipynb
+++ b/notebooks/analyze_covid_deaths.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,11 +76,98 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>uf</th>\n      <th>tipo_doenca</th>\n      <th>local_obito</th>\n      <th>faixa_etaria</th>\n      <th>sexo</th>\n      <th>total</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>AC</td>\n      <td>OUTRAS</td>\n      <td>DOMICILIO</td>\n      <td>&lt; 9</td>\n      <td>F</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AC</td>\n      <td>OUTRAS</td>\n      <td>DOMICILIO</td>\n      <td>&lt; 9</td>\n      <td>M</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>AC</td>\n      <td>OUTRAS</td>\n      <td>HOSPITAL</td>\n      <td>&lt; 9</td>\n      <td>F</td>\n      <td>30</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AC</td>\n      <td>OUTRAS</td>\n      <td>HOSPITAL</td>\n      <td>&lt; 9</td>\n      <td>M</td>\n      <td>55</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>AC</td>\n      <td>OUTRAS</td>\n      <td>IGNORADO</td>\n      <td>&lt; 9</td>\n      <td>M</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 2
     }
    ],
    "source": [
     "data_2019.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                             total\ntipo_doenca                       \nCOVID                            1\nINDETERMINADA                 6985\nINSUFICIENCIA_RESPIRATORIA  100516\nOUTRAS                      659968\nPNEUMONIA                   226203\nSEPTICEMIA                  175439\nSRAG                          1498\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_2019 = data_2019.groupby(\"tipo_doenca\").sum()\n",
+    "print(total_2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                               total\nuf tipo_doenca                      \nAC INDETERMINADA                  37\n   INSUFICIENCIA_RESPIRATORIA    219\n   OUTRAS                       1998\n   PNEUMONIA                     890\n   SEPTICEMIA                    419\n...                              ...\nTO INSUFICIENCIA_RESPIRATORIA    456\n   OUTRAS                       3156\n   PNEUMONIA                     898\n   SEPTICEMIA                    517\n   SRAG                            8\n\n[163 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_2019 = data_2019.groupby([\"uf\",\"tipo_doenca\"]).sum()\n",
+    "print(total_2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "data_sel_2019 = data_2019.query(f\"tipo_doenca == 'COVID' and uf == 'AL'\")\n",
+    "len(data_sel_2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n1\n[0, 2365]\n"
+     ]
+    }
+   ],
+   "source": [
+    "estado = \"AL\"\n",
+    "causa =  \"COVID\"\n",
+    "total_2019 = data_2019.groupby([\"uf\",\"tipo_doenca\"]).sum()\n",
+    "total_2020 = data_2020.groupby([\"uf\", \"tipo_doenca\"]).sum()\n",
+    "quant_2019 = len(total_2019.query(f\"tipo_doenca == 'COVID' and uf == 'AL'\"))\n",
+    "quant_2020 = len(total_2020.query(f\"tipo_doenca == 'COVID' and uf == 'AL'\"))\n",
+    "print(quant_2019)\n",
+    "print(quant_2020)\n",
+    "if quant_2019 != 0:\n",
+    "    quant_2019 = int(total_2019.loc[estado, causa])\n",
+    "if quant_2020 != 0:\n",
+    "    quant_2020 = int(total_2020.loc[estado, causa])\n",
+    "lista = [quant_2019, quant_2020]\n",
+    "print(lista)"
    ]
   },
   {
